# SoCDAML-NPU-Exercise

./: .gitignore  README.md  prepare_and_verify_env.sh  requirements.txt
exercises/01_single_double_buffer/: CMakeLists.txt  Makefile  addOne.cc  add_one_double.py  add_one_single.py  test.cpp  test.py
exercises/01_single_double_buffer/solutions/: add_one_double_solution.py
exercises/02_distribute_join/: Makefile  addOne.cc  add_one_distribute.py  test.py
exercises/02_distribute_join/solutions/: add_one_distribute_solution.py
exercises/03_layout_transform/: Makefile  matmul_scalar.py  matmul_vectorized.py  mm.cc  test.py
exercises/03_layout_transform/solutions/: matmul_vectorized_solution.py
exercises/04_layer_fusion/: Makefile  collect_trace.py  matmul_dual.py  matmul_relu_fused.py  matmul_relu_pipeline.py  mm.cc  relu_dual.py  relu_dual_scalar.py  test.py  test_cpp.cpp  test_relu_cpp.cpp  test_sequential.py  test_sequential_cpp.cpp
exercises/04_layer_fusion/solutions/: matmul_relu_fused_solution.py  matmul_relu_pipeline_solution.py  mm_solution.cc
exercises/PartII/: env.sh
exercises/PartII/A.1/app/: main.c
exercises/PartII/A.2/app/: main.c
exercises/PartII/A.3/app/: main.c
exercises/PartII/B.1/: Makefile
exercises/PartII/B.1/app/: main.c
exercises/PartII/B.1/app/include/: B_in_HBM.txt
exercises/PartII/B.2/app/: main.c
exercises/PartII/B.2/app/include/: A_in_HBM.txt
exercises/PartII/C.1/app/: main.c
